Fix logo size on mobile

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -265,6 +265,10 @@ header {
   .hero {
     width: 80%;
   }
+
+  header nav .nav-container #logo img {
+    width: 200px;
+  }
 }
 
 @media screen and (max-width: 500px) {
